@@ -17,3 +17,4 @@ Francois Pesce <francois.pesce@gmail.com>
 Sergei Shnaidman <sergei.shnaidman@qik.com>
 Alex <alex2048@gmail.com>
 Gary Fitts <gary@intouchgroup.com> - major contribution of URL-template
+Frank_Migge <Frank_Migge@manulife.com>
